# RoseEngine

./: ..gitignore.kate-swp  .gitignore  CMakeLists.txt  CMakeLists.txt~  Cmakelist.txt~  LICENSE  OpenGL_FunctionLoader.h  README.md  RunTest.sh  resources.md
.github/ISSUE_TEMPLATE/: bug_report.md  issue-report.md
.lapce/: run.toml
COI/: COI.h  CompileShader.h  LoadTexture.h  readme.md
Engine/: CMakeLists.txt  CMakeLists.txt~  FISH.h  FISH.h~
Engine/core/: Application.cc  Application.cc~  Application.h  Application.h~  main.h  main.h~  shared-opjects-define.h
PlayGround/: sandbox.cc  sandbox.cc~
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake  logging_system_test  test_window_system
build_test/src/Engine/core/window-sys/: Makefile  cmake_install.cmake
build_test/src/Engine/debug_sys/logging_sys/: Makefile  cmake_install.cmake
build_test/src/Engine/graphics/window-sys/: Makefile  cmake_install.cmake
build_test/src/debug_sys/logging_sys/: Makefile  cmake_install.cmake
build_test/src/graphics/window-sys/: Makefile  cmake_install.cmake
examples/: Application.cc
notes/: how it works.rnote  v0.1.md
renderer/: IndexBuffer.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexSpecification.h
renderer/functions/: CompileShader.h
scripts/: build_test.sh
scripts/build_engine_cmake_file/: CMakeLists.txt
scripts/build_test_cmake_file/: CMakeLists.txt
src/Engine/: CMakeLists.txt  RoseEngine.h
src/Engine/core/: base.h  entry_point.h
src/Engine/core/Events/: Event.h
src/Engine/core/Layer/: Layer.h
src/Engine/core/RoseApplication/: CMakeLists.txt  RoseApplication.cpp  RoseApplication.h
src/Engine/core/event_system/: event.cpp  event.h  key_codes.h
src/Engine/core/event_system_backup/: event.h
src/Engine/core/event_system_backup/key_events/: KeyEvent.h
src/Engine/core/event_system_backup/mouse_events/: mouse_event.h
src/Engine/core/threads/: CMakeLists.txt  threads.cpp  threads.h
src/Engine/core/window-sys/: CMakeLists.txt  window-sys.cpp  window-sys.h
src/Engine/core/window-sys/input/: input.cpp  input.h
src/Engine/debug_sys/logging_sys/: CMakeLists.txt  logging.cpp  logging.h
src/Engine/event_system/: event.h
src/Engine/event_system/application_events/: application_event.h
src/Engine/renderer/: CMakeLists.txt  renderer.cpp  renderer.h
src/Engine/renderer/opengl-pipeline/: Camera.h  VertexArrayObject.h
src/Engine/renderer/pipeline/: camera.h  mesh.h  model.h  shader.h
src/debug_sys/logging_sys/: logging.cpp  logging.h
src/event_system/: KeyEvent.h  MouseEvent.h  event_system.h
src/event_system/key_events/: key_event.h
src/event_system/mouse_events/: mouse_codes.h
src/graphics/window-sys/: CMakeLists.txt  window-sys.cpp  window-sys.h
test/event_system/: event_test.cpp
test/logging_system/: logging_system_test.cpp
test/renderer/: renderer_test.cpp
test/sand_box/: CMakeLists.txt  sandbox.cpp  sandbox.h  sandboxapp.cpp
test/window_system/: test_window.cpp
